<resources>
    <string name="app_name">WorkMule</string>

    <string name="channel_name">WorkMule notifications</string>
    <string name="channel_description">Notifications for the WorkMule practice application.</string>
    <string name="channel_id">WORK_MULE_NOTIFICATION_CHANNEL_ID</string>
    <string name="work_mule_notification_title">WorkMule Notification</string>

    <string name="intro">Practice with Notifications and WorkManager</string>
    <string name="btn_right">Next</string>
    <string name="btn_left">Back</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_request">Request</string>

    <string name="title_intro">The WorkMule</string>
    <string name="description">This practice app is an example of Notifications, ViewModel - LiveData and the WorkManager.</string>
    <string name="swipe">Next or Back to navigate to other fragments</string>

    <string name="title_viewmodel">Example using ViewModel</string>
    <string name="description_view_model">The Request button fires time consuming tasks that take seconds to complete. If you click again before the tasks are finished, the requests execute concurrently.\n\nThe ViewModel presents progress with Notifications.\n\n\BUG:\nIf you NAVIGATE AWAY from the fragment, Notifications are not shown anymore.</string>

    <string name="title_work_manager">Example using WorkManager</string>
    <string name="description_work">The Request button fires time consuming tasks. Those are handled by WorkManager./n/nThose tasks must continue to present notifications regardles of NAVIGATING AWAY from the fragment.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
