<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@drawable/thin_border"
    tools:context=".TestViewModelFragment">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_intro"
        style="@style/WorkMuleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_reset"/>

    <TextView
        android:id="@+id/description"
        android:text="@string/description"
        style="@style/WorkMuleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <TextView
        android:id="@+id/swipe"
        android:text="@string/swipe"
        style="@style/WorkMuleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        />

</android.support.constraint.ConstraintLayout>